added client->server communication

--- a/ProjectOOP.csproj
+++ b/ProjectOOP.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="TextBoxWriter.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SimpleTCP" Version="1.0.24" />
   </ItemGroup>
 
